assets/css/main.css
/* Rosario. I've added and changed few things. Feel free to change it as you like */

/* Font size of 2.0 is too big, I'll reduce it */

body {
  font-size: 2.2rem;
  border-top: 5px solid #4d8ecb;
  line-height: 1.5em;
  padding: 0;
  margin: 0;
}

/* Adding some text shadow*/
.site-head {text-shadow: 2px 2px #234;}
.site-head a {color:#eee;}

/* The font is too large in the post view. Revert to small size*/
.post-header .blog-title {font-size:inherit;}

/* Reduce font size and add line-height*/
pre{
  font-size: 0.75em;
  line-height: 1.4em;
}

/* Author styling */
.author {margin-bottom:1em;}
.author header{
  float:left;
  width: 80px;
}
.author article{
  margin-left:80px;
  min-height: 80px;
  padding-left:20px;
}

img.profile {
  width:80px;
  height:auto;
  border-radius: 50px;
}

.social-icon {
  padding-right: 17px;
  font-size: 20px;
}

.social-section {
  text-align: center;
  font-size: 15px;
  padding-top: 5px;
}

.social-section a {
  padding: 10px;
}
.draft-warning {
  color: red;
  text-align:center;
  border: 3px solid;
  padding: 15px;
  margin: 15px;
}

